# temprs

./: Cargo.toml  LICENSE  README.md  runner.sh
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
completions/: _temprs  _tp
docs/: index.html  report.html
man/man1/: temprs.1  temprsall.1
src/: lib.rs  main.rs
src/model/: app.rs  apply_permutation_tests.rs  mod.rs  opts.rs  state.rs  temp_app.rs  temp_state.rs
src/model/state/: mod.rs  tests.rs
src/util/: consts.rs  mod.rs  utils.rs
tests/: contract_algebra_round4.rs  contract_input_output_master.rs  contract_name_invariants.rs  edge_cases.rs  expire_invalid_hours.rs  integration.rs  master_record_tag_roundtrip.rs  tag_alignment_after_mutation.rs
