[package]
name = "temprs"
version = "0.5.1"
authors = ["Jacob Menke <linux.dev25@gmail.com>"]
edition = "2018"
description = "A temporary file manager with stack mechanism"
license = "MIT"
repository = "https://github.com/MenkeTechnologies/temprs"
homepage = "https://github.com/MenkeTechnologies/temprs"
keywords = ["cli", "temporary-file"]
categories = ["command-line-utilities"]

[[bin]]
name = "temprs"
path = "src/main.rs"

[profile.release]
lto = true
panic = "abort"
strip = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "tp"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
log = "0.4.14"
env_logger = "0.10.0"
simple_logger = "1.13.0"
regex = "1.5.4"
clap = "2.3.3"
