[package]
name = "temprs"
version = "1.3.0"
authors = ["Jacob Menke <linux.dev25@gmail.com>"]
edition = "2018"
description = "A temporary file manager with stack mechanism"
license = "MIT"
repository = "https://github.com/MenkeTechnologies/temprs"
homepage = "https://github.com/MenkeTechnologies/temprs"
keywords = ["cli", "temporary-file"]
categories = ["command-line-utilities"]

[lib]
name = "temprs"
path = "src/lib.rs"

[[bin]]
name = "temprs"
path = "src/main.rs"

[profile.release]
lto = true
panic = "abort"
strip = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "tp"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.10.0"
simple_logger = "1.13.0"
clap = "4.6.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
