[package]
name = "temprs"
version = "2.9.4"
authors = ["Jacob Menke <linux.dev25@gmail.com>"]
edition = "2024"
description = "A temporary file manager with stack mechanism"
license = "MIT"
repository = "https://github.com/MenkeTechnologies/temprs"
homepage = "https://github.com/MenkeTechnologies/temprs"
keywords = ["cli", "temporary-file"]
categories = ["command-line-utilities"]

[lib]
name = "temprs"
path = "src/lib.rs"

[[bin]]
name = "temprs"
path = "src/main.rs"

[profile.release]
lto = true
panic = "abort"
strip = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "tp"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.29"
env_logger = "0.11.10"
simple_logger = "5.2.0"
clap = "4.6.0"
fs2 = "0.4"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "benchmarks"
harness = false
